# cutebot

./: .gitignore  CLAUDE.md  DEV_GUIDELINES.md  LICENSE  M0_PLAN.md  M3_PLAN.md  M4_PLAN.md  M7_PLAN.md  PRODUCT_SPEC.md  README.md  ROADMAP.md  SCRIPTS_REFERENCE.md  brand.example.md  brand.example.yaml  brand.yaml  env.example  pyproject.toml  railway.toml  requirements.txt
.claude/skills/run/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_timezone_aware_datetimes.py  0003_feedback_reason.py
app/: __init__.py  brand.py  config.py  db.py  llm.py  main.py  models.py  render.py  scheduler.py  schemas.py  stock.py
app/notifier/: __init__.py  base.py  telegram.py
app/pipeline/: __init__.py  generate.py  publish.py  queue.py  review.py
app/publishers/: __init__.py  base.py
docs/: POST_V1_REVIEW.md
docs/archive/: M1_PLAN.md  M2_PLAN.md  M5_ISSUES.md  M6_PLAN.md
scripts/: eval_models.py
tests/: conftest.py  test_config.py  test_db.py  test_llm_live.py  test_pipeline.py  test_stock.py  test_telegram.py
